--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -10478,26 +10478,26 @@ select[disabled] {
 ._7yfwnp:focus-within ._1xw9br6j > svg {
   rotate: 180deg;
 }
-._15kke0s {
+.explore-filter-menu {
   max-width: 848px !important;
   overflow: auto !important;
 }
 @media only screen and (max-width: 1100px) {
-  ._15kke0s {
+  .explore-filter-menu {
     max-height: 360px !important;
   }
 }
 @media only screen and (max-width: 1260px) {
-  ._15kke0s {
+  .explore-filter-menu {
     max-height: 420px !important;
   }
 }
-._h9eo3p {
+.explore-filter-menu__wrapper {
   max-height: calc(100vh - 220px) !important;
   overflow: hidden auto !important;
   padding: 20px !important;
 }
-._ztxgz4 {
+.explore-filter-menu__spinner-visibility {
   position: relative !important;
   overflow: visible !important;
 }
