Revert "rename block"
This reverts commit c2411d7a8c6a016e39b4eccda329913c1756b7c8.

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -2991,12 +2991,12 @@
   }
 }
 @media print {
-  .block {
+  ._1ynbv25 {
     display: block !important;
   }
 }
 @media (min-width: 744px) {
-  .block {
+  ._1ynbv25 {
     display: none !important;
   }
 }
@@ -31756,11 +31756,11 @@ tr.show-desktop {
     display: none !important;
   }
 }
-.block {
+._nx67f0 {
   display: block !important;
 }
 @media (min-width: 1128px) {
-  .block {
+  ._nx67f0 {
     display: none !important;
   }
 }
@@ -35831,7 +35831,7 @@ tr.show-desktop {
   ._10ejfg4u {
     visibility: visible;
   }
-  .block,
+  ._1ynbv25,
   .search-bar-xs {
     display: none;
   }
@@ -37667,11 +37667,11 @@ tr.show-desktop {
     display: none !important;
   }
 }
-.block {
+._tgtm1b {
   display: block !important;
 }
 @media (min-width: 1128px) {
-  .block {
+  ._tgtm1b {
     display: block !important;
   }
 }
@@ -47188,7 +47188,7 @@ tr.show-desktop {
 ._dkkqb8:focus[data-focus-visible-added] {
   box-shadow: 0 0 0 2px #000 !important;
 }
-.block {
+._1ynbv25 {
   display: block !important;
 }
 ._1pdnceg::before {
@@ -54555,7 +54555,7 @@ a:hover {
 
 @supports (grid-gap: 16px) {}
 
-.block {
+.base-nav-card-link {
   display: block !important;
 }
 
