--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -1612,11 +1612,11 @@
   overflow-y: auto !important;
   -webkit-overflow-scrolling: touch !important;
 }
-.inline {
+._1lwbucx {
   display: inline !important;
 }
 @media (min-width: 744px) {
-  .inline {
+  ._1lwbucx {
     display: none !important;
   }
 }
@@ -1661,11 +1661,11 @@
   opacity: 0 !important;
   left: -10000px !important;
 }
-.inline {
+._1g8cjd8 {
   display: inline !important;
 }
 @media (min-width: 1128px) {
-  .inline {
+  ._1g8cjd8 {
     display: none !important;
   }
 }
@@ -20518,11 +20518,11 @@ h3:first-child {
     line-height: 20px !important;
   }
 }
-.inline {
+._t8y1n6 {
   display: inline !important;
 }
 @media (min-width: 744px) {
-  .inline {
+  ._t8y1n6 {
     display: block !important;
   }
 }
@@ -22289,10 +22289,10 @@ _qgvrjoy {
   margin: 0 !important;
   padding: 0 !important;
 }
-.inline-block {
+._15bwml3 {
   display: inline-block !important;
 }
-.inline-block:before {
+._15bwml3:before {
   display: none !important;
 }
 ._blc9xe {
@@ -27551,11 +27551,11 @@ html :where(img[class*='wp-image-']) {
     margin: 10px 16px !important;
   }
 }
-.inline-block {
+._1t3783v {
   display: inline-block !important;
 }
 @media (min-width: 1128px) {
-  .inline-block {
+  ._1t3783v {
     font-size: var(--iw-ehf-f) !important;
     line-height: var(---s-l-myu) !important;
     font-weight: var(--e-y-j-d-v-j) !important;
@@ -31385,11 +31385,11 @@ tr.show-desktop {
   position: relative !important;
   z-index: 5 !important;
 }
-.inline-block {
+._mo78s93 {
   display: inline-block !important;
 }
 @media (min-width: 1128px) {
-  .inline-block {
+  ._mo78s93 {
     display: none !important;
   }
 }
@@ -49753,7 +49753,7 @@ tr.show-desktop {
   display: inline-block !important;
   padding-right: 11px !important;
 }
-.inline-block {
+._36rlri {
   display: inline-block !important;
 }
 ._1n0bqws7 {
@@ -51183,7 +51183,7 @@ textarea {
 ._149pqlo {
   margin-right: 12px !important;
 }
-.inline {
+._g86r3e {
   display: inline !important;
 }
 ._1mm0shk {
