--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -51183,7 +51183,7 @@ textarea {
 ._149pqlo {
   margin-right: 12px !important;
 }
-._g86r3e {
+.inline {
   display: inline !important;
 }
 ._1mm0shk {
