--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4859,6 +4859,9 @@ select[disabled] {
   width: 100% !important;
   vertical-align: top !important;
 }
+.inline {
+  display: inline !important;
+}
 /* /Utilities */
 
 /* Footer */
