--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -10201,11 +10201,11 @@ select[disabled] {
     align-items: center !important;
   }
 }
-.contents {
+._upim4d {
   display: none !important;
 }
 @media (min-width: 744px) {
-  .contents {
+  ._upim4d {
     display: contents !important;
   }
 }
@@ -10283,11 +10283,11 @@ h3:first-child {
   margin-top: 0;
 }
 @media print {
-  .contents {
+  ._upim4d {
     display: contents !important;
   }
 }
-.contents {
+._upim4d {
   display: contents !important;
 }
 ._1pntom0 {
@@ -11798,7 +11798,7 @@ h3:first-child {
   animation-fill-mode: both !important;
   animation-name: keyframe_d37zz3 !important;
 }
-.contents {
+._y0r5kt {
   display: contents !important;
 }
 ._159z8rr {
@@ -50836,7 +50836,7 @@ textarea {
   font-weight: 600 !important;
   border-top: 1px solid #ddd !important;
 }
-.contents {
+._z4lmgp {
   display: contents !important;
 }
 ._1ucy1zjv {
