--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -11798,7 +11798,7 @@ h3:first-child {
   animation-fill-mode: both !important;
   animation-name: keyframe_d37zz3 !important;
 }
-._y0r5kt {
+.contents {
   display: contents !important;
 }
 ._159z8rr {
@@ -50836,7 +50836,7 @@ textarea {
   font-weight: 600 !important;
   border-top: 1px solid #ddd !important;
 }
-._z4lmgp {
+.contents {
   display: contents !important;
 }
 ._1ucy1zjv {
