--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -4862,6 +4862,19 @@ select[disabled] {
 .inline {
   display: inline !important;
 }
+.row-condensed {
+  margin-left: -4px !important;
+  margin-right: -4px !important;
+}
+.row-condensed:before {
+  content: ' ' !important;
+  display: table !important;
+}
+.row-condensed:after {
+  content: ' ' !important;
+  display: table !important;
+  clear: both !important;
+}
 /* /Utilities */
 
 /* Footer */
