--- a/src/css/global.css
+++ b/src/css/global.css
@@ -1530,12 +1530,12 @@
   font-weight: 600!important;
   padding-bottom: 24px!important
 }
-._q4izx9 {
+.explore-filter-menu__list-item {
   padding-top: 12px!important;
   padding-bottom: 12px!important
 }
 @media (min-width:744px) {
-  ._q4izx9 {
+  .explore-filter-menu__list-item {
     min-width: 320px!important
   }
 }
