--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -25245,7 +25245,7 @@ html :where(img[class*='wp-image-']) {
     transition: none !important;
   }
 }
-._hi9sy {
+.explore-filter-menu__list-desc {
   color: #717171 !important;
   margin-top: 4px !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -35212,7 +35212,7 @@ tr.show-desktop {
 .dir-rtl.atm_ll_exct8b:is(*, #x) {
   padding-left: 16px;
 }
-.dir.rcem0st:is(*, #x#x) {
+.dir.explore-filter-menu__list-padding:is(*, #x#x) {
   padding-top: 24px;
   padding-bottom: 24px;
   border-radius: 1px;
@@ -35225,7 +35225,7 @@ tr.show-desktop {
   padding-top: 8px;
   padding-bottom: 8px;
 }
-.dir.u6fux4d:is(*, #x#x) {
+.dir.explore-filter-menu__list-padding--reset:is(*, #x#x) {
   padding-top: 0;
   padding-bottom: 0;
 }
@@ -37397,7 +37397,7 @@ tr.show-desktop {
   padding-top: 16px !important;
   padding-bottom: 16px !important;
 }
-._41yoza {
+.explore-filter-menu__list-checkbox {
   display: inline-block !important;
   border-width: 1px !important;
   border-style: solid !important;
@@ -46598,7 +46598,7 @@ tr.show-desktop {
 ._7q0o8o4:focus {
   color: #222 !important;
 }
-._gfomxi {
+.explore-filter-menu__list-label {
   -webkit-box-pack: center !important;
   -ms-flex-pack: center !important;
   -webkit-box-direction: normal !important;
@@ -46618,7 +46618,7 @@ tr.show-desktop {
   flex: 1 1 auto !important;
   width: 100% !important;
 }
-._gw4xx4 {
+.explore-filter-menu__list-title {
   color: #222 !important;
   cursor: inherit !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -50781,14 +50781,14 @@ textarea {
 ._1a5re9s {
   text-decoration: underline !important;
 }
-._10ndlvp {
+.explore-filter-menu__list-content {
   position: relative !important;
   display: inline-block !important;
   cursor: pointer !important;
   padding: 0 !important;
 }
 
-._41yoza {
+.explore-filter-menu__list-checkbox {
   display: inline-block !important;
   border-width: 1px !important;
   border-style: solid !important;
@@ -50939,7 +50939,7 @@ textarea {
   border-radius: 50% !important;
 }
 
-._hi9sy {
+.explore-filter-menu__list-desc {
   color: #717171 !important;
   margin-top: 4px !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -50948,7 +50948,7 @@ textarea {
   font-size: 14px !important;
   line-height: 18px !important;
 }
-.dir.u6fux4d[class][class] {
+.dir.explore-filter-menu__list-padding--reset[class][class] {
   padding-top: 0;
   padding-bottom: 0;
 }
@@ -53995,7 +53995,7 @@ a:hover {
   padding-top: 8px;
   padding-bottom: 8px;
 }
-.dir.rcem0st[class][class] {
+.dir.explore-filter-menu__list-padding[class][class] {
   padding-top: 24px;
   padding-bottom: 24px;
   border-radius: 1px;
@@ -54003,7 +54003,7 @@ a:hover {
 ._13xlah4 {
   cursor: pointer !important;
 }
-._gfomxi {
+.explore-filter-menu__list-label {
   -webkit-box-pack: center !important;
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
@@ -54013,7 +54013,7 @@ a:hover {
   flex: 1 1 auto !important;
   width: 100% !important;
 }
-._gw4xx4 {
+.explore-filter-menu__list-title {
   color: #222 !important;
   cursor: inherit !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
