--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -5577,7 +5577,7 @@
     max-width: unset !important;
   }
 }
-.imagetext-nav-link-container {
+.other-card {
   -webkit-box-align: center !important;
   font-size: 16px !important;
   line-height: 20px !important;
@@ -5586,17 +5586,17 @@
   align-items: center !important;
   border-radius: 12px !important;
 }
-.imagetext-nav-link-container:focus-visible {
+.other-card:focus-visible {
   outline: 0 !important;
   transition: box-shadow 0.2s !important;
   box-shadow: rgb(0 0 0) 0 0 0 2px, rgb(255 255 255) 0 0 0 4px !important;
 }
 @media (min-width: 1128px) {
-  .imagetext-nav-link-container {
+  .other-card {
     border-radius: 8px !important;
   }
 }
-.imagetext-nav-link-image {
+.other-card__media {
   position: relative !important;
   background-color: #ddd !important;
   overflow: hidden !important;
@@ -5606,32 +5606,32 @@
   margin-right: 12px !important;
 }
 @media (min-width: 744px) {
-  .imagetext-nav-link-image {
+  .other-card__media {
     margin-right: 16px !important;
   }
 }
 @media (min-width: 1128px) {
-  .imagetext-nav-link-image {
+  .other-card__media {
     flex: 0 0 64px !important;
     height: 64px !important;
     border-radius: 8px !important;
   }
 }
-.imagetext-nav-link-text {
+.other-card__body {
   -webkit-box-flex: 1 !important;
   flex-grow: 1 !important;
   display: flex !important;
   flex-wrap: wrap !important;
   overflow-x: hidden !important;
 }
-.imagetext-nav-link-text-truncate {
+.other-card__text {
   flex: 0 1 100% !important;
   text-overflow: ellipsis !important;
   overflow: hidden !important;
   white-space: nowrap !important;
   padding-bottom: 2px !important;
 }
-.imagetext-nav-link-text-truncate:last-child {
+.other-card__text:last-child {
   padding-bottom: 0 !important;
 }
 .grouped-nav-listing-grid-container {
