--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -13052,6 +13052,43 @@ fieldset[disabled] .btn {
     top: 12px!important
   }
 }
+.explore-filter-menu__control-duration {
+  position: relative !important;
+  font-size: 12px !important;
+  line-height: 16px !important;
+  color: rgb(113, 113, 113) !important;
+  font-weight: 400 !important;
+  margin-top: 16px !important;
+}
+.explore-filter-menu__control-selected-range-md {
+  background-color: rgb(34, 34, 34) !important;
+  position: absolute !important;
+  border-radius: 4px !important;
+  height: 4px !important;
+  top: 0px !important;
+}
+.explore-filter-menu__spinner-control-plain {
+  width: 27px !important;
+  height: 27px !important;
+  padding: 1px 7px !important;
+  border-width: 1px !important;
+  border-style: solid !important;
+  border-color: rgb(176, 176, 176) !important;
+  background-color: rgb(255, 255, 255) !important;
+  border-radius: 27px !important;
+  outline: none !important;
+  z-index: 2 !important;
+  margin-left: -13.5px !important;
+  top: -9.5px !important;
+}
+.explore-filter-menu__spinner-line-md {
+  background-color: rgb(176, 176, 176) !important;
+  position: relative !important;
+  border-radius: 4px !important;
+  height: 4px !important;
+  top: 0px !important;
+  width: 100% !important;
+}
 .explore-filter-menu__spinner-line {
   background-color: #ddd!important;
   position: relative!important;
