Rename explore-filter-menu group-size switch spinner-chart

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -10221,35 +10221,35 @@ select[disabled] {
   border-bottom-left-radius: 4px !important;
   background: #fff !important;
 }
-._26er9a {
+.explore-filter-menu__group-size {
   cursor: pointer !important;
 }
 @media (min-width: 744px) {
-  ._26er9a {
+  .explore-filter-menu__group-size {
     min-width: 320px !important;
   }
 }
-._u6cmu {
+.explore-filter-menu__group-size-content {
   -webkit-box-align: center !important;
   display: flex !important;
   align-items: center !important;
   padding-top: 8px !important;
 }
-._spvffs {
+.explore-filter-menu__group-size-text {
   font-size: 16px !important;
   line-height: 20px !important;
   color: #222 !important;
   flex: 1 1 auto !important;
   margin-left: 8px !important;
 }
-._12qtsjh {
+.explore-filter-menu__group-size-space {
   font-size: 14px !important;
   line-height: 18px !important;
   padding-top: 8px !important;
   margin-right: 56px !important;
   color: #717171 !important;
 }
-._1vmcy00 {
+.explore-filter-menu__switch-input {
   min-width: 50px !important;
   margin-left: 12px !important;
 }
@@ -12595,7 +12595,7 @@ h3:first-child {
     padding-right: 8px !important;
   }
 }
-._1jj61m9 {
+.spinner-chart__input-price {
   position: relative !important;
   cursor: text !important;
   display: -webkit-box !important;
@@ -15403,7 +15403,7 @@ h3:first-child {
   left: 0 !important;
   width: calc(100% - 16px) !important;
 }
-._1eaes69 {
+.explore-filter-menu__group-size-option {
   flex: 0 0 auto !important;
 }
 ._fsdsdp {
@@ -25443,7 +25443,7 @@ html :where(img[class*='wp-image-']) {
   margin-bottom: var(--h-x-sf-jw);
 }
 
-._16g1cyy8 {
+.form__switch-toggle-checked {
   -webkit-box-pack: center !important;
   -webkit-box-align: center !important;
   background-color: #fff !important;
@@ -46547,7 +46547,7 @@ tr.show-desktop {
   line-height: 20px !important;
   font-weight: 400 !important;
 }
-._1yw7hpv {
+.spinner-chart__input-label {
   position: relative !important;
   -webkit-flex: 1 !important;
   -ms-flex: 1 1 0% !important;
@@ -49812,7 +49812,7 @@ tr.show-desktop {
     max-width: 60% !important;
   }
 }
-._utak6qs {
+.spinner-chart__input-currency-text {
   padding-top: 26px !important;
   padding-left: 12px !important;
   margin-right: -6px !important;
@@ -49824,7 +49824,7 @@ tr.show-desktop {
 ._1vk19cb {
   margin-top: 16px !important;
 }
-._vr1ztso {
+.form__switch-toggle {
   -webkit-box-pack: center !important;
   -webkit-box-align: center !important;
   background-color: #fff !important;
@@ -49957,7 +49957,7 @@ tr.show-desktop {
   display: block !important;
   width: 100% !important;
 }
-._rin72m {
+.explore-filter-menu__group-size-label {
   background: 0 0 !important;
   border: 0 !important;
   cursor: pointer !important;
@@ -50247,7 +50247,7 @@ tr.show-desktop {
 ._1d5136v {
   margin-top: 12px !important;
 }
-._1jj61m9 {
+.spinner-chart__input-price {
   position: relative !important;
   cursor: text !important;
   display: flex !important;
@@ -50265,7 +50265,7 @@ tr.show-desktop {
   line-height: 20px !important;
   font-weight: 400 !important;
 }
-._1m2ich98 {
+.spinner-chart__input-title {
   position: absolute !important;
   top: 18px !important;
   left: 12px !important;
@@ -50285,7 +50285,7 @@ tr.show-desktop {
   transform: translateY(-8px) scale(0.75) !important;
   font-weight: 400 !important;
 }
-._fywymp7 {
+.spinner-chart__input-currency {
   display: flex !important;
   opacity: 1 !important;
 }
@@ -50926,7 +50926,7 @@ textarea {
   margin-right: 8px !important;
   padding: 0 !important;
 }
-._1yw7hpv {
+.spinner-chart__input-label {
   position: relative !important;
   flex: 1 1 0% !important;
   padding: 0 !important;
@@ -53957,7 +53957,7 @@ a:hover {
   transform: translateY(-8px) scale(0.75) !important;
   font-weight: 400 !important;
 }
-._11hx67x {
+.spinner-chart__input-title-text {
   max-width: 100% !important;
   overflow: hidden !important;
   text-overflow: ellipsis !important;
