--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -21008,7 +21008,7 @@ _qgvrjoy {
   word-break: break-word !important;
   text-align: right !important;
 }
-._en4nskq {
+.btn-link--condensed {
   font-size: inherit !important;
   font-family: inherit !important;
   font-style: inherit !important;
@@ -21033,37 +21033,37 @@ _qgvrjoy {
   text-align: right !important;
   outline: 0 !important;
 }
-._en4nskq:focus {
+.btn-link--condensed:focus {
   color: inherit !important;
   text-decoration: underline !important;
 }
-._en4nskq:visited {
+.btn-link--condensed:visited {
   color: #222 !important;
   text-decoration: underline !important;
 }
 @media (hover: hover) {
-  ._en4nskq:hover {
+  .btn-link--condensed:hover {
     cursor: pointer !important;
     color: #000 !important;
     text-decoration: underline !important;
   }
 }
-._en4nskq:active {
+.btn-link--condensed:active {
   color: #717171 !important;
   text-decoration: underline !important;
 }
-._en4nskq::-moz-focus-inner {
+.btn-link--condensed::-moz-focus-inner {
   border: none !important;
   padding: 0 !important;
   margin: 0 !important;
 }
-._en4nskq:focus::-moz-focus-inner {
+.btn-link--condensed:focus::-moz-focus-inner {
   border: none !important;
 }
-._en4nskq:-moz-focusring {
+.btn-link--condensed:-moz-focusring {
   outline: 0 !important;
 }
-._en4nskq:focus-visible {
+.btn-link--condensed:focus-visible {
   color: #222 !important;
   text-decoration: underline !important;
   -webkit-transition: box-shadow 0.2s !important;
@@ -21072,13 +21072,13 @@ _qgvrjoy {
   box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._en4nskq:focus-visible {
+  .btn-link--condensed:focus-visible {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._en4nskq:focus[data-focus-visible-added] {
+.btn-link--condensed:focus[data-focus-visible-added] {
   color: #222 !important;
   text-decoration: underline !important;
   -webkit-transition: box-shadow 0.2s !important;
@@ -21087,23 +21087,23 @@ _qgvrjoy {
   box-shadow: 0 0 0 2px #fff, 0 0 0 4px #222 !important;
 }
 @media (prefers-reduced-motion: reduce) {
-  ._en4nskq:focus[data-focus-visible-added] {
+  .btn-link--condensed:focus[data-focus-visible-added] {
     -webkit-transition: none !important;
     -moz-transition: none !important;
     transition: none !important;
   }
 }
-._en4nskq:disabled {
+.btn-link--condensed:disabled {
   cursor: not-allowed !important;
   color: #ddd !important;
   text-decoration: underline !important;
 }
 @media (hover: hover) {
-  ._en4nskq:disabled:hover {
+  .btn-link--condensed:disabled:hover {
     text-decoration: none !important;
   }
 }
-._en4nskq:disabled:hover {
+.btn-link--condensed:disabled:hover {
   text-decoration: underline !important;
 }
 ._onfnh81 {
