--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -30182,7 +30182,7 @@ html :where(img[class*='wp-image-']) {
   clear: both !important;
   display: table !important;
 }
-._121z06r2 {
+.breadcrumb__text {
   margin: 0 !important;
   word-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -31124,7 +31124,7 @@ tr.show-desktop {
     display: none;
   }
 }
-._1ckj08w {
+.breadcrumb {
   padding: 0 !important;
   margin: 0 !important;
 }
@@ -31325,7 +31325,7 @@ tr.show-desktop {
     position: relative !important;
   }
 }
-._121z06r2 {
+.breadcrumb__text {
   margin: 0 !important;
   overflow-wrap: break-word !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
@@ -49339,7 +49339,7 @@ tr.show-desktop {
   display: inline-block !important;
   padding-right: 11px !important;
 }
-._36rlri {
+.breadcrumb__item {
   display: inline-block !important;
 }
 ._1n0bqws7 {
